Revision history for {{$dist->name}}

{{$NEXT}}
  - This plugin now requires Alien::Build of at least 2.39.

0.07      2021-05-15 14:28:23 -0600
  - Optionally use GitHub Personall Access Token when specified as
    environment variable and using Alien::Build 2.39+ (gh#3, gh#13, gh#14)

0.06      2020-05-01 09:47:42 -0600
  - Add tags_only property (gh#8 kiwiroy++)

0.05      2019-09-27 05:48:35 -0600
  - Add include_assets property (gh#7 kiwiroy++)

0.04      2019-08-30 02:33:59 -0400
  - Fix "wide character in subroutine entry" diagnostic.

0.03      2019-04-09 04:33:06 -0400
  - Fixed bug where json was improperly decoded for fetch plugins that use temp files (gh#4,gh#5)
  - Added a number of unit tests (gh#2, gh#5)
  - Fixed bug where version wasn't being correctly parsed from the index (gh#1, gh#5)

0.02      2019-04-08 21:14:57 -0400
  - Update documentation.
  - Changed the default of the prefer property from 1 to 0.
  - When prefer property is set to 0, a default prefer hook is added, which
    leaves the list of releases unsorted.  This is different from the
    Download Negotiator plugin.  Since GitHub usually returns a
    sorted list of releases this will frequently be what you want.

0.01      2019-04-08 20:51:34 -0400
  - initial version