@@ -20,6 +20,12 @@ jobs:
           - tag: "static"
           - tag: "5.37"
           - tag: "5.36"
+            env: ALIEN_DOWNLOAD_RULE=warn
+          - tag: "5.36"
+            env: ALIEN_DOWNLOAD_RULE=encrypt
+          - tag: "5.36"
+            env: ALIEN_DOWNLOAD_RULE=digest_or_encrypt
+          - tag: "5.36"
           - tag: "5.34"
           - tag: "5.32"
           - tag: "5.30"
@@ -37,6 +43,7 @@ jobs:
 
     env:
       CIP_TAG: ${{ matrix.cip.tag }}
+      CIP_ENV: ${{ matrix.cip.env }}
 
     steps:
       - uses: actions/checkout@v2
