@@ -1,2 +1,3 @@
 /Alien-Build-Plugin-Download-GitHub-*
 /.build
+/.tmp
